--- a/log in.html
+++ b/log in.html
@@ -96,7 +96,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="titlepage">
-                        <h2>Contact Us</h2>
+                        <h2>Sign Up</h2>
                     </div>
                 </div>
             </div>
@@ -121,11 +121,32 @@
                             <div class=" col-md-12">
                                 <input class="form-control" placeholder="Phone" type="text" name="Phone">
                             </div>
-                            <div class="col-md-12">
-                                <textarea class="textarea" placeholder="Message"></textarea>
+                            <div class=" col-md-12">
+                                <input class="form-control" placeholder="Profession" type="text" name="Phone">
                             </div>
                             <div class=" col-md-12">
-                                <button class="send">Send</button>
+                                <input class="form-control" placeholder="Anual Income" type="text" name="Phone">
+                            </div>
+                            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6">
+                                <input class="form-control" placeholder="Area" type="text" name="Your Name">
+                            </div>
+                            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6">
+                                <input class="form-control" placeholder="City" type="text" name="Email">
+                            </div>
+                            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6">
+                                <input class="form-control" placeholder="District" type="text" name="Your Name">
+                            </div>
+                            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6">
+                                <input class="form-control" placeholder="State" type="text" name="Email">
+                            </div>
+                            <!-- <div class="col-md-12">
+                                <textarea class="textarea" placeholder=""></textarea>
+                            </div> -->
+                            <div class=" col-md-6">
+                                <button class="send">Sign Up</button>
+                            </div>
+                            <div class=" col-md-6">
+                                <button class="send">Do Verification</button>
                             </div>
                         </div>
                     </form>
@@ -141,38 +162,78 @@
             <div class="container">
                 <div class="row pdn-top-30">
                     <div class="col-md-12 ">
-                        <div class="footer-box">
+                        <div class="headinga">
+                            <h3>Updates</h3>
+                        </div>    
+                        <div class="row" >
                             <div class="headinga">
-                                <h3>Address</h3>
+                                <!-- <h4 style="color: white">Govenment Schemes</h4> -->
+                                <h3>Govenment Schemes</h3>     
+                                <!-- <span>Healing Center, 176 W Streetname,New York, NY 10014, US</span> -->
+                                <ul class="menu-area-main">
+                                    <li><a href="government.html" style="color: white">scheme 1</a></li>
+                                    <li><a href="government.html" style="color: white">scheme 2</a></li>
+                                    <li><a href="government.html" style="color: white">scheme 3</a></li>
+                                    <li><a href="government.html" style="color: white">scheme 4</a></li>
+                                </ul>
+                            </div>
+                            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                            <div class="headinga">
+                                <!-- <h4 style="color: white">Laons</h4> -->
+                                <h3>Loans</h3>
+                                <!-- <span>Healing Center, 176 W Streetname,New York, NY 10014, US</span> -->
+                                <ul class="menu-area-main">
+                                    <li><a href="government.html" style="color: white">scheme 1</a></li>
+                                    <li><a href="government.html" style="color: white">scheme 2</a></li>
+                                    <li><a href="government.html" style="color: white">scheme 3</a></li>
+                                    <li><a href="government.html" style="color: white">scheme 4</a></li>
+                                </ul>
+                            </div>
+                            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                            <div class="headinga">
+                                <!-- <h4 style="color: white">Start Ups</h4> -->
+                                <h3>Start Ups</h3>
+                                <!-- <span>Healing Center, 176 W Streetname,New York, NY 10014, US</span> -->
+                                <ul class="menu-area-main">
+                                    <li><a href="government.html" style="color: white">scheme 1</a></li>
+                                    <li><a href="government.html" style="color: white">scheme 2</a></li>
+                                    <li><a href="government.html" style="color: white">scheme 3</a></li>
+                                    <li><a href="government.html" style="color: white">scheme 4</a></li>
+                                </ul>
+                            </div>
+                            <!-- <div class="headinga">
+                                <h4 style="color: white">Address</h4>
                                 <span>Healing Center, 176 W Streetname,New York, NY 10014, US</span>
                                 <p>(+71) 8522369417
                                     <br>demo@gmail.com</p>
-                            </div>
-                            <ul class="location_icon">
+                            </div> -->
+                            <!-- <ul class="location_icon">
                                 <li> <a href="#"><i class="fa fa-facebook-f"></i></a></li>
                                 <li> <a href="#"><i class="fa fa-twitter"></i></a></li>
                                 <li> <a href="#"><i class="fa fa-instagram"></i></a></li>
 
+                            </ul> -->
+                            
+                        </div>
+                        <br>
+                        <br>
+                        <div class="menu-bottom">
+                            <ul class="link">
+                                <li > <a href="index.html">Home</a> </li>
+                                <li> <a href="profession.html">Find Others</a> </li>
+                                <li><a href="community.html">Community</a></li>
+                                <li><a href="Account.html">Account</a></li>
+                                <li><a href="log in.html">Log In</a></li>
                             </ul>
-                            <div class="menu-bottom">
-                                <ul class="link">
-                                    <li> <a href="#">Home</a></li>
-                                    <li> <a href="#">About</a></li>
-                                    
-                                    <li> <a href="#">Brand </a></li>
-                                    <li> <a href="#">Specials  </a></li>
-                                    <li> <a href="#"> Contact us</a></li>
-                                </ul>
-                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="copyright">
+            <!-- <div class="copyright">
                 <div class="container">
                     <p>© 2019 All Rights Reserved. Design By<a href="https://html.design/"> Free Html Templates</a></p>
                 </div>
-            </div>
+            </div> -->
         </div>
     </footer>
     <!-- end footer -->
