Added and updated images

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         <div class="full">
                             <div class="center-desk">
                                 <div class="logo">
-                                    <a href="index.html"><img src="images/logo.png" alt="#"></a>
+                                    <a href="index.html"><img src="images/logo/1.png" alt="#"></a>
                                 </div>
                             </div>
                         </div>
@@ -95,7 +95,7 @@
         <div id="myCarousel" class="carousel slide banner-main" data-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img class="first-slide" src="images/banner.jpg" alt="First slide">
+                    <img class="first-slide" src="images/farmers/rajesh-ram-HOOKgN_zIY8-unsplash.jpg" alt="First slide">
                     <div class="container">
                         <div class="carousel-caption relative">
                             <span>Govenment Schemes</span>
@@ -112,7 +112,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="second-slide" src="images/banner.jpg" alt="Second slide">
+                    <img class="second-slide" src="images/dairy/juliana-amorim-MHhkxAIcoCo-unsplash.jpg" alt="Second slide">
                     <div class="container">
                         <div class="carousel-caption relative">
                             <span>Connect With Community </span>
@@ -129,7 +129,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="third-slide" src="images/banner.jpg" alt="Third slide">
+                    <img class="third-slide" src="images/carpenter/javad-esmaeili-_0R0DZtZK2k-unsplash.jpg" alt="Third slide">
                     <div class="container">
                         <div class="carousel-caption relative">
                             <span>Recuit Others </span>
@@ -147,7 +147,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="third-slide" src="images/banner.jpg" alt="Forth slide">
+                    <img class="third-slide" src="images/scheme/CoinTribe-signs-MoU-with-NSIC-under-Bank-Credit-Facilitation-Scheme.jpg" alt="Forth slide">
                     <div class="container">
                         <div class="carousel-caption relative">
                             <span>Start a New profession</span>
