find others modification

--- a/Account.html
+++ b/Account.html
@@ -62,7 +62,7 @@
                                  <nav class="main-menu">
                                      <ul class="menu-area-main">
                                          <li class="active"> <a href="index.html">Home</a> </li>
-                                         <li> <a href="profession.html">Find Others</a> </li>
+                                         <li> <a href="find others.html">Find Others</a> </li>
                                          <li><a href="community.html">Community</a></li>
                                          <li><a href="Account.html">Account</a></li>
                                          <li><a href="log in.html">Log In</a></li>
