--- a/community.html
+++ b/community.html
@@ -61,10 +61,10 @@
                     <div class="col-xl-9 col-lg-9 col-md-9 col-sm-9">
                         <div class="menu-area">
                             <div class="limit-box">
-                                <nav class="main-menu">
+                                <nav class="main-menu">e
                                     <ul class="menu-area-main">
                                         <li class="active"> <a href="index.html">Home</a> </li>
-                                        <li> <a href="profession.html">Find Others</a> </li>
+                                        <li> <a href="find others.html">Find Others</a> </li>
                                         <li><a href="community.html">Community</a></li>
                                         <li><a href="Account.html">Account</a></li>
                                         <li><a href="log in.html">Log In</a></li>
