--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                                 <nav class="main-menu">
                                     <ul class="menu-area-main">
                                         <li class="active"> <a href="index.html">Home</a> </li>
-                                        <li> <a href="profession.html">Find Others</a> </li>
+                                        <li> <a href="find others.html">Find Others</a> </li>
                                         <li><a href="community.html">Community</a></li>
                                         <li><a href="Account.html">Account</a></li>
                                         <li><a href="log in.html">Log In</a></li>
@@ -137,7 +137,7 @@
                             <p>Add English here</p>
                             <!-- <p>It is a long established fact that a reader will be distracted by the readable content
                                 <br> of a page when looking at its layout. The point of using Lorem Ipsum is that</p> -->
-                            <a class="buynow" href="profession.html">Connect</a>
+                            <a class="buynow" href="find others.html">Connect</a>
                             <!-- <ul class="social_icon">
                                 <li> <a href="#"><i class="fa fa-facebook-f"></i></a></li>
                                 <li> <a href="#"><i class="fa fa-twitter"></i></a></li>
@@ -155,7 +155,7 @@
                             <p>It is a long established fact that a reader will be distracted by the readable content
                                 <br> of a page when looking at its layout. The point of using Lorem Ipsum is that</p> -->
                             <p>Add some lines here</p>
-                            <a class="buynow" href="profession.html">Start</a>
+                            <a class="buynow" href="find others.html">Start</a>
                             <!-- <ul class="social_icon">
                                 <li> <a href="#"><i class="fa fa-facebook-f"></i></a></li>
                                 <li> <a href="#"><i class="fa fa-twitter"></i></a></li>
