--- a/find others.html
+++ b/find others.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
     <!-- site metas -->
-    <title>find others</title>
+    <title>community</title>
     <meta name="keywords" content="">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -61,7 +61,7 @@
                     <div class="col-xl-9 col-lg-9 col-md-9 col-sm-9">
                         <div class="menu-area">
                             <div class="limit-box">
-                                <nav class="main-menu">
+                                <nav class="main-menu">e
                                     <ul class="menu-area-main">
                                         <li class="active"> <a href="index.html">Home</a> </li>
                                         <li> <a href="find others.html">Find Others</a> </li>
@@ -96,46 +96,96 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="titlepage">
-                        <h2>About</h2>
+                        <h2>Our Brand</h2>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 
-    <!-- about -->
-    <div class="about">
+    <!-- brand -->
+    <div class="brand">
         <div class="container">
-            <div class="row">
-                <div class="col-xl-5 col-lg-5 col-md-5 co-sm-l2">
-                    <div class="about_img">
-                        <figure><img src="images/about.png" alt="img" /></figure>
-                    </div>
-                </div>
-                <div class="col-xl-7 col-lg-7 col-md-7 co-sm-l2">
-                    <div class="about_box">
-                        <span>Farmers</span>
-                        <p>Farmers need</p>
 
+        </div>
+        <div class="brand-bg">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xl-4 col-lg-4 col-md-4 col-sm-6 margin">
+                        <div class="brand_box">
+                            <img src="images/1.png" alt="img" />
+                            <h3>$<strong class="red">100</strong></h3>
+                            <span>Mobile Phone</span>
+                            <i><img src="images/star.png"/></i>
+                            <i><img src="images/star.png"/></i>
+                            <i><img src="images/star.png"/></i>
+                            <i><img src="images/star.png"/></i>
+                        </div>
                     </div>
-                </div>
-                <div class="col-xl-7 col-lg-7 col-md-7 co-sm-l2">
-                    <div class="about_box_ ">
-                        <span>Carpentars</span>
-                        <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of It is a long established fact that a reader will be distracted by the </p>
-
+                    <div class="col-xl-4 col-lg-4 col-md-4 col-sm-6 margin">
+                        <div class="brand_box">
+                            <img src="images/2.png" alt="img" />
+                            <h3>$<strong class="red">100</strong></h3>
+                            <span>Mobile Phone</span>
+                            <i><img src="images/star.png"/></i>
+                            <i><img src="images/star.png"/></i>
+                            <i><img src="images/star.png"/></i>
+                            <i><img src="images/star.png"/></i>
+                        </div>
                     </div>
-                </div>
-                <div class="col-xl-5 col-lg-5 col-md-5 co-sm-l2">
-                    <div class="about_img">
-                        <figure><img src="images/about.png" alt="img" /></figure>
+                    <div class="col-xl-4 col-lg-4 col-md-4 col-sm-6 margin">
+                        <div class="brand_box">
+                            <img src="images/3.png" alt="img" />
+                            <h3>$<strong class="red">100</strong></h3>
+                            <span>Mobile Phone</span>
+                            <i><img src="images/star.png"/></i>
+                            <i><img src="images/star.png"/></i>
+                            <i><img src="images/star.png"/></i>
+                            <i><img src="images/star.png"/></i>
+                        </div>
+                    </div>
+                    <div class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
+                        <div class="brand_box">
+                            <img src="images/4.png" alt="img" />
+                            <h3>$<strong class="red">100</strong></h3>
+                            <span>Mobile Phone</span>
+                            <i><img src="images/star.png"/></i>
+                            <i><img src="images/star.png"/></i>
+                            <i><img src="images/star.png"/></i>
+                            <i><img src="images/star.png"/></i>
+                        </div>
+                    </div>
+                    <div class="col-xl-4 col-lg-4 col-md-4 col-sm-6 mrgn">
+                        <div class="brand_box">
+                            <img src="images/5.png" alt="img" />
+                            <h3>$<strong class="red">100</strong></h3>
+                            <span>Mobile Phone</span>
+                            <i><img src="images/star.png"/></i>
+                            <i><img src="images/star.png"/></i>
+                            <i><img src="images/star.png"/></i>
+                            <i><img src="images/star.png"/></i>
+                        </div>
+                    </div>
+                    <div class="col-xl-4 col-lg-4 col-md-4 col-sm-6 mrgn">
+                        <div class="brand_box">
+                            <img src="images/6.png" alt="img" />
+                            <h3>$<strong class="red">100</strong></h3>
+                            <span>Mobile Phone</span>
+                            <i><img src="images/star.png"/></i>
+                            <i><img src="images/star.png"/></i>
+                            <i><img src="images/star.png"/></i>
+                            <i><img src="images/star.png"/></i>
+                        </div>
+                    </div>
+                    <div class="col-md-12">
+                        <a class="read-more">See More</a>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    </div>
-    <!-- end about -->
+
+    <!-- end brand -->
 
     <!-- footer -->
     <footer>
