--- a/index.html
+++ b/index.html
@@ -95,14 +95,14 @@
         <div id="myCarousel" class="carousel slide banner-main" data-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img class="first-slide" src="images/farmers/rajesh-ram-HOOKgN_zIY8-unsplash.jpg" alt="First slide">
+                    <img class="first-slide" src="images/home-page/connect.png" alt="First slide">
                     <div class="container">
                         <div class="carousel-caption relative">
                             <span>Connect With Community </span>
                             <!-- <h1>up to 25% Flat Sale</h1> -->
-                            <p>Add some English here</p>
+                            <p>Discover recruiters and job seekers nearby</p>
                                 <!-- <br> of a page when looking at its layout. The point of using Lorem Ipsum is that -->
-                            <a class="buynow" href="government.html">Find More</a>
+                            <a class="buynow" href="government.html">Connect</a>
                             <!-- <ul class="social_icon">
                                 <li> <a href="#"><i class="fa fa-facebook-f"></i></a></li>
                                 <li> <a href="#"><i class="fa fa-twitter"></i></a></li>
@@ -112,14 +112,14 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="second-slide" src="images/dairy/juliana-amorim-MHhkxAIcoCo-unsplash.jpg" alt="Second slide">
+                    <img class="second-slide" src="images/home-page/Schemes.jpg" alt="Second slide">
                     <div class="container">
                         <div class="carousel-caption relative">
                             <span>Govenment Schemes</span>
-                            <p>Add Some Emglish here</p> 
+                            <p>Schemes for rural development launched by the Central and State Government</p> 
                             <!-- <p>It is a long established fact that a reader will be distracted by the readable content
                                 <br> of a page when looking at its layout. The point of using Lorem Ipsum is that</p> -->
-                            <a class="buynow" href="community.html">Connect</a>
+                            <a class="buynow" href="community.html">Know more</a>
                             <!-- <ul class="social_icon">
                                 <li> <a href="#"><i class="fa fa-facebook-f"></i></a></li>
                                 <li> <a href="#"><i class="fa fa-twitter"></i></a></li>
@@ -129,15 +129,15 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="third-slide" src="images/carpenter/javad-esmaeili-_0R0DZtZK2k-unsplash.jpg" alt="Third slide">
+                    <img class="third-slide" src="images/home-page/" alt="Third slide">
                     <div class="container">
                         <div class="carousel-caption relative">
-                            <span>Recuit Others </span>
+                            <span> </span>
                             <!-- <h1>up to 25% Flat Sale</h1> -->
-                            <p>Add English here</p>
+                            <p>Find talented local workers</p>
                             <!-- <p>It is a long established fact that a reader will be distracted by the readable content
                                 <br> of a page when looking at its layout. The point of using Lorem Ipsum is that</p> -->
-                            <a class="buynow" href="find others.html">Connect</a>
+                            <a class="buynow" href="find others.html">Hire people</a>
                             <!-- <ul class="social_icon">
                                 <li> <a href="#"><i class="fa fa-facebook-f"></i></a></li>
                                 <li> <a href="#"><i class="fa fa-twitter"></i></a></li>
@@ -147,14 +147,14 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="third-slide" src="images/scheme/CoinTribe-signs-MoU-with-NSIC-under-Bank-Credit-Facilitation-Scheme.jpg" alt="Forth slide">
+                    <img class="fourth-slide" src="images/home-page/establish.png" alt="Forth slide">
                     <div class="container">
                         <div class="carousel-caption relative">
                             <span>Start a New profession</span>
                             <!-- <h1>up to 25% Flat Sale</h1>
                             <p>It is a long established fact that a reader will be distracted by the readable content
                                 <br> of a page when looking at its layout. The point of using Lorem Ipsum is that</p> -->
-                            <p>Add some lines here</p>
+                            <p>Establish your enterprise</p>
                             <a class="buynow" href="find others.html">Start</a>
                             <!-- <ul class="social_icon">
                                 <li> <a href="#"><i class="fa fa-facebook-f"></i></a></li>
