added images to find others page

--- a/find others.html
+++ b/find others.html
@@ -61,7 +61,7 @@
                     <div class="col-xl-9 col-lg-9 col-md-9 col-sm-9">
                         <div class="menu-area">
                             <div class="limit-box">
-                                <nav class="main-menu">e
+                                <nav class="main-menu">
                                     <ul class="menu-area-main">
                                         <li class="active"> <a href="index.html">Home</a> </li>
                                         <li> <a href="find others.html">Find Others</a> </li>
@@ -113,7 +113,7 @@
                 <div class="row">
                     <div class="col-xl-4 col-lg-4 col-md-4 col-sm-6 margin">
                         <div class="brand_box">
-                            <img src="images/farmers/amol-sonar-a_Y4LJsU0eU-unsplash.jpg" alt="img" />
+                            <img src="images/people/farmer.jfif" alt="img" />
                             <h3>Vishwas</h3>
                             <span>Farmer</span>
                             <span>Karauli, Rajasthan</span>
@@ -121,7 +121,7 @@
                     </div>
                     <div class="col-xl-4 col-lg-4 col-md-4 col-sm-6 margin">
                         <div class="brand_box">
-                            <img src="images/2.png" alt="img" />
+                            <img src="images/people/transportation.jfif" alt="img" />
                             <h3>Jitender</h3>
                             <span>Transportation</span>
                             <span>Palaj, Gujarat</span>
@@ -129,7 +129,7 @@
                     </div>
                     <div class="col-xl-4 col-lg-4 col-md-4 col-sm-6 margin">
                         <div class="brand_box">
-                            <img src="images/3.png" alt="img" />
+                            <img src="images/people/fisherman.jfif" alt="img" />
                             <h3>Meet</h3>
                             <span>Fisherman</span>
                             <span>Washim, Maharashtra</span>
@@ -137,7 +137,7 @@
                     </div>
                     <div class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
                         <div class="brand_box">
-                            <img src="images/4.png" alt="img" />
+                            <img src="images/people/milkman.jfif" alt="img" />
                             <h3>Nimit</h3>
                             <span>Milkman</span>
                             <span>Lucknow, UP</span>
@@ -145,18 +145,18 @@
                     </div>
                     <div class="col-xl-4 col-lg-4 col-md-4 col-sm-6 mrgn">
                         <div class="brand_box">
-                            <img src="images/5.png" alt="img" />
+                            <img src="images/people/carpenter.jfif" alt="img" />
                             <h3>Harshil</h3>
                             <span>Carpenter</span>
-                            <span>Shinor, Vadodara</span>
+                            <span>Shinor, Gujarat</span>
                         </div>
                     </div>
                     <div class="col-xl-4 col-lg-4 col-md-4 col-sm-6 mrgn">
                         <div class="brand_box">
-                            <img src="images/6.png" alt="img" />
+                            <img src="images/people/shopkeeper.jfif" alt="img" />
                             <h3>Manoj</h3>
-                            <span>???</span>
-                            <span></span>
+                            <span>Shopkeeper</span>
+                            <span>Kovalam, Kerala</span>
                         </div>
                     </div>
                     <div class="col-md-12">
