--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="second-slide" src="images/home-page/Schemes.jpg" alt="Second slide">
+                    <center><img class="second-slide" src="images/home-page/Schemes.jpg" alt="Second slide"></center>
                     <div class="container">
                         <div class="carousel-caption relative">
                             <span>Govenment Schemes</span>
@@ -129,12 +129,12 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="third-slide" src="images/home-page/" alt="Third slide">
+                    <center><img class="third-slide" src="images/home-page/recruit.jpg" alt="Third slide"></center>
                     <div class="container">
                         <div class="carousel-caption relative">
-                            <span> </span>
+                            <span style="color: black;">Hire People!</span>
                             <!-- <h1>up to 25% Flat Sale</h1> -->
-                            <p>Find talented local workers</p>
+                            <p style="color: black;">Find talented local workers</p>
                             <!-- <p>It is a long established fact that a reader will be distracted by the readable content
                                 <br> of a page when looking at its layout. The point of using Lorem Ipsum is that</p> -->
                             <a class="buynow" href="find others.html">Hire people</a>
