--- a/community.html
+++ b/community.html
@@ -96,7 +96,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="titlepage">
-                        <h2>About</h2>
+                        <h2>Employment Opportunities</h2>
                     </div>
                 </div>
             </div>
@@ -118,16 +118,16 @@
                         <p>Are you looking for workers?</p>
                         <p>Here are some available disciplined and punctual workers in you local areas. Click on the button to contact them directly.</p>
                         <br>
-                        <button type="button" class="btn btn-danger">Click here</button>
+                        <button type="button" class="btn btn-danger"><a href="find others.html">Click here</a></button>
                     </div>
                 </div>
                 <div class="col-xl-7 col-lg-7 col-md-7 co-sm-l2">
                     <div class="about_box_ ">
-                        <span>Seeking Employers</span>
+                        <span>Recruiting Employers</span>
                         <p>Are you looking for a decent job?</p>
                         <p>Click on the below button to see the available job opportunties around your local areas. Grab your opportuntiy.</p>
                         <br>
-                        <button type="button" class="btn btn-danger">Click here</button>
+                        <button type="button" class="btn btn-danger"><a href="find others.html">Click here</a></button>
                     </div>
                 </div>
                 <div class="col-xl-5 col-lg-5 col-md-5 co-sm-l2">
@@ -141,48 +141,7 @@
     </div>
     <!-- end about -->
 
-    <!-- footer 
-    <footer>
-        <div id="contact" class="footer">
-            <div class="container">
-                <div class="row pdn-top-30">
-                    <div class="col-md-12 ">
-                        <div class="footer-box">
-                            <div class="headinga">
-                                <h3>Address</h3>
-                                <span>Healing Center, 176 W Streetname,New York, NY 10014, US</span>
-                                <p>(+71) 8522369417
-                                    <br>demo@gmail.com</p>
-                            </div>
-                            <ul class="location_icon">
-                                <li> <a href="#"><i class="fa fa-facebook-f"></i></a></li>
-                                <li> <a href="#"><i class="fa fa-twitter"></i></a></li>
-                                <li> <a href="#"><i class="fa fa-instagram"></i></a></li>
 
-                            </ul>
-                            <div class="menu-bottom">
-                                <ul class="link">
-                                    <li> <a href="#">Home</a></li>
-                                    <li> <a href="#">About</a></li>
-                                    
-                                    <li> <a href="#">Brand </a></li>
-                                    <li> <a href="#">Specials  </a></li>
-                                    <li> <a href="#"> Contact us</a></li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="copyright">
-                <div class="container">
-                    <p>© 2019 All Rights Reserved. Design By<a href="https://html.design/"> Free Html Templates</a></p>
-                </div>
-            </div>
-        </div>
-    </footer>
-    <!-- end footer -->
-    <!-- Javascript files-->
     <!--footer-->
     <footer>
         <div id="contact" class="footer">
