--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
                         <div class="headinga">
                             <h3>Updates</h3>
                         </div>    
-                        <div class="row" >
+                        <div class="row" style="margin-left: 175px;margin-right: 0px;">
                             <div class="headinga">
                                 <!-- <h4 style="color: white">Govenment Schemes</h4> -->
                                 <h3>Govenment Schemes</h3>     
