--- a/community.html
+++ b/community.html
@@ -66,7 +66,7 @@
                                         <li class="active"> <a href="index.html">Home</a> </li>
                                         <li> <a href="find others.html">Find Others</a> </li>
                                         <li><a href="community.html">Community</a></li>
-                                        <li><a href="Account.html">Account</a></li>
+                                        <li><a href="government.html">Schemes</a></li>
                                         <li><a href="log in.html">Log In</a></li>
                                         <li class="last">
                                             <a href="#"><img src="images/search_icon.png" alt="icon" /></a>
@@ -151,7 +151,7 @@
                         <div class="headinga">
                             <h3>Updates</h3>
                         </div>    
-                        <div class="row" >
+                        <div class="row" style="margin-left: 175px;margin-right: 0px;">
                             <div class="headinga">
                                 <!-- <h4 style="color: white">Govenment Schemes</h4> -->
                                 <h3>Govenment Schemes</h3>     
@@ -206,9 +206,9 @@
                         <div class="menu-bottom">
                             <ul class="link">
                                 <li > <a href="index.html">Home</a> </li>
-                                <li> <a href="profession.html">Find Others</a> </li>
+                                <li> <a href="find others.html">Find Others</a> </li>
                                 <li><a href="community.html">Community</a></li>
-                                <li><a href="Account.html">Account</a></li>
+                                <li><a href="government.html">Schemes</a></li>
                                 <li><a href="log in.html">Log In</a></li>
                             </ul>
                         </div>
