--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                                         <li class="active"> <a href="index.html">Home</a> </li>
                                         <li> <a href="find others.html">Find Others</a> </li>
                                         <li><a href="community.html">Community</a></li>
-                                        <li><a href="Account.html">Account</a></li>
+                                        <li><a href="government.html">Schemes</a></li>
                                         <li><a href="log in.html">Log In</a></li>
                                         <li class="last">
                                             <a href="#"><img src="images/search_icon.png" alt="icon" /></a>
@@ -381,9 +381,9 @@
                         <div class="menu-bottom">
                             <ul class="link">
                                 <li > <a href="index.html">Home</a> </li>
-                                <li> <a href="profession.html">Find Others</a> </li>
+                                <li> <a href="find others.html">Find Others</a> </li>
                                 <li><a href="community.html">Community</a></li>
-                                <li><a href="Account.html">Account</a></li>
+                                <li><a href="government.html">Schemes</a></li>
                                 <li><a href="log in.html">Log In</a></li>
                             </ul>
                         </div>
