--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@
                     <img class="first-slide" src="images/home-page/connect.png" alt="First slide">
                     <div class="container">
                         <div class="carousel-caption relative">
-                            <span>Connect With Community </span>
+                            <span style="color: black;">Connect With Community </span>
                             <!-- <h1>up to 25% Flat Sale</h1> -->
-                            <p>Discover recruiters and job seekers nearby</p>
+                            <p style="color: black;">Discover recruiters and job seekers nearby</p>
                                 <!-- <br> of a page when looking at its layout. The point of using Lorem Ipsum is that -->
                             <a class="buynow" href="government.html">Connect</a>
                             <!-- <ul class="social_icon">
@@ -115,8 +115,8 @@
                     <center><img class="second-slide" src="images/home-page/Schemes.jpg" alt="Second slide"></center>
                     <div class="container">
                         <div class="carousel-caption relative">
-                            <span>Govenment Schemes</span>
-                            <p>Schemes for rural development launched by the Central and State Government</p> 
+                            <span style="color: darkgreen;">Govenment Schemes</span>
+                            <p style="color :darkslategrey;">Schemes for rural development launched by the Central and State Government</p> 
                             <!-- <p>It is a long established fact that a reader will be distracted by the readable content
                                 <br> of a page when looking at its layout. The point of using Lorem Ipsum is that</p> -->
                             <a class="buynow" href="community.html">Know more</a>
@@ -150,11 +150,11 @@
                     <img class="fourth-slide" src="images/home-page/establish.png" alt="Forth slide">
                     <div class="container">
                         <div class="carousel-caption relative">
-                            <span>Start a New profession</span>
+                            <span style="color: black;">Start a New profession</span>
                             <!-- <h1>up to 25% Flat Sale</h1>
                             <p>It is a long established fact that a reader will be distracted by the readable content
                                 <br> of a page when looking at its layout. The point of using Lorem Ipsum is that</p> -->
-                            <p>Establish your enterprise</p>
+                            <p style="color: black;">Establish your enterprise</p>
                             <a class="buynow" href="find others.html">Start</a>
                             <!-- <ul class="social_icon">
                                 <li> <a href="#"><i class="fa fa-facebook-f"></i></a></li>
@@ -188,7 +188,7 @@
                         <h3>About Us</h3>
                         <!-- <span>Our Mobile Shop</span>
                         <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of It is a long established fact that a reader will be distracted by the </p> -->
-                        <p>Add some English</p>  
+                        <p>We at Rucon believe in the collaboration of rural or semi-urban youths to build their business and stay connected with the urban world. </p>  
                     </div>
                
             </div>
@@ -206,7 +206,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="titlepage">
-                        <h2>What's New</h2>
+                        <h2>Our Motto</h2>
                     </div>
                 </div>
             </div>
@@ -229,8 +229,8 @@
                             </div>
                             <div class="full testimonial_cont text_align_center cross_layout">
                                 <div class="cross_inner">
-                                    <h3>Due markes<br><strong class="ornage_color">Rental</strong></h3>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit ess</i>
+                                    <h3>The essence of a happy life and a peaceful society lies in one sentence ---<br> What can I give ?<br><strong class="ornage_color">Abdul Kalam</strong></h3>
+                                    <p>The nation can compete effectively with the other nations if every individual of the society contribute something unique or more for every year progressively.</p></i>
                                     </p>
                                     <div class="full text_align_center margin_top_30">
                                         <img src="icon/testimonial_qoute.png">
@@ -247,8 +247,8 @@
                             </div>
                             <div class="full testimonial_cont text_align_center cross_layout">
                                 <div class="cross_inner">
-                                    <h3>Due markes<br><strong class="ornage_color">Rental</strong></h3>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit ess</i>
+                                    <h3>Collaboration<br><strong class="ornage_color">Connect and collaborate for the welfare of the rural areas</strong></h3>
+                                    <p>Merge your ideas and strategies for the growth of your local areas. A cool platform for everyone to develop their own business by collabarating with your local area people</i>
                                     </p>
                                     <div class="full text_align_center margin_top_30">
                                         <img src="icon/testimonial_qoute.png">
@@ -266,8 +266,8 @@
                             </div>
                             <div class="full testimonial_cont text_align_center cross_layout">
                                 <div class="cross_inner">
-                                    <h3>Due markes<br><strong class="ornage_color">Rental</strong></h3>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit ess</i>
+                                    <h3>Minimising Supply chain <br><strong class="ornage_color">One who dedicates deserve more profit.</strong></h3>
+                                    <p>Bringing producers and consumers as close as possible. A forward step to remove middle men and brokers from the supply chain.</i>
                                     </p>
                                     <div class="full text_align_center margin_top_30">
                                         <img src="icon/testimonial_qoute.png">
